[gd_scene load_steps=11 format=3 uid="uid://bm2bouy6icxqt"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_14ufc"]
[ext_resource type="Texture2D" uid="uid://cetw5iq2axded" path="res://characters/player_character.png" id="2_a33eh"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2D.gd" id="2_b6am3"]
[ext_resource type="PackedScene" uid="uid://dm0u8ojj1jdg6" path="res://scenes/hurtbox.tscn" id="4_um60v"]
[ext_resource type="PackedScene" uid="uid://ctj1goo0n5f3v" path="res://scenes/player_attack.tscn" id="5_kp78o"]

[sub_resource type="Animation" id="Animation_lxsw2"]
resource_name = "walking"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_2yxss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_d8hip"]
resource_name = "take_hit"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2qvlp"]
_data = {
"RESET": SubResource("Animation_2yxss"),
"take_hit": SubResource("Animation_d8hip"),
"walking": SubResource("Animation_lxsw2")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sxstv"]
radius = 8.00004
height = 35.8

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, 1.1)
rotation = 3.14159
scale = Vector2(0.999995, -1)
script = ExtResource("1_14ufc")

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_a33eh")
hframes = 24
frame = 6
region_enabled = true
region_rect = Rect2(1.07391, 143.468, 767.628, 48.2058)

[node name="PhantomCamera2D" type="Node2D" parent="."]
visible = false
position = Vector2(-0.000507039, -200)
script = ExtResource("2_b6am3")
priority_override = false
priority = 0
zoom = Vector2(1, 1)
follow_mode = 2
follow_target = NodePath("..")
follow_parameters/target_offset = Vector2(0, -200)
follow_parameters/damping = false
frame_preview = true
pixel_perfect = true
limit/draw_limits = false
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
limit/limit_node_target = NodePath("")
limit/smoothed = false
tween_parameters = null
tween_on_load = true
inactive_update_mode = 0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -125)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2qvlp")
}
autoplay = "walking"

[node name="Hurtbox" parent="." instance=ExtResource("4_um60v")]
collision_layer = 4
collision_mask = 4

[node name="HurtboxCollision" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_sxstv")
debug_color = Color(0.886275, 0, 0.00392157, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_sxstv")
debug_color = Color(0.619608, 0.533333, 0.0392157, 0.419608)

[node name="PlayerAttack" parent="." instance=ExtResource("5_kp78o")]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="CollisionTimer" to="." method="_on_collision_timer_timeout"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
